--- a/studentportal.api/studentportal.api/appsettings.json
+++ b/studentportal.api/studentportal.api/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+
+    "StudentPortalDB": "Server=localhost;Database=StudentAdminPortalDB;Trusted_Connection=True;"
+  }
 }
